# k8s-operator

./: .charmcraft-channel  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .woke.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  charmcraft.yaml  config.yaml  generate-src-docs.sh  metadata.yaml  pyproject.toml  redeploy.sh  renovate.json  test-ck-etcd.yaml  test_requirements.txt  tox.ini  trivy.yaml
.github/: .jira_sync_config.yaml  pull_request_template.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: setup-lxd-arm64.sh
.github/workflows/: auto-merge-prs.yaml  auto-update-libs-k8s-worker.yaml  auto-update-libs-k8s.yaml  auto-update-snap-revision.yaml  bot_pr_approval.yaml  build-charm.yaml  charm-analysis.yaml  cla-check.yaml  comment.yaml  comment_contributing.yaml  download-charm.yaml  inclusive_naming_check.yaml  integration-test-k8s-jubilant.yaml  integration_test.yaml  integration_test_betterbuild.yaml  load_test.yaml  nightly.yaml  promote-charms.yaml  promote_charm.yaml  publish-charms.yaml  publish-k8s-worker.yaml  publish-k8s.yaml  stale-cron.yaml  test.yaml  tests-k8s-worker.yaml  tests-k8s.yaml  tiobe-tics-cron.yaml  trivy.yaml  update-snap-revision.py  update-snap-revision.yaml  weekly.yaml  zizmor.yaml
charms/: CONTRIBUTION.md
charms/k8s/: .jujuignore  README.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
charms/k8s-worker/: metadata.yaml  pyproject.toml
charms/k8s-worker/src/: charm.py
charms/k8s/src/: charm.py  k8s_manager.py  k8sd_api_manager.py
charms/k8s/worker/: .jujuignore  charmcraft.yaml  pyproject.toml
charms/worker/: .jujuignore  README.md  build-snap-installation.sh  charmcraft.yaml  lxd-profile.yaml  pyproject.toml  requirements.txt
charms/worker/k8s/: .jujuignore  README.md  build-snap-installation.sh  charmcraft.yaml  lxd-profile.yaml  pyproject.toml  requirements.txt  tox.ini
charms/worker/k8s/lib/charms/data_platform_libs/v0/: upgrade.py
charms/worker/k8s/lib/charms/grafana_agent/v0/: cos_agent.py
charms/worker/k8s/lib/charms/k8s/v0/: k8sd_api_manager.py
charms/worker/k8s/lib/charms/kubernetes_libs/v0/: etcd.py
charms/worker/k8s/scripts/: update_alert_rules.py  update_dashboards.py
charms/worker/k8s/scripts/dashboard-patches/: 002_cluster_juju_fields.patch  003_etcd_instance_juju_fields.patch
charms/worker/k8s/scripts/rules-patches/: 001_core_alert_rules.patch  002_cpu_utilization.patch  003_mem_node_exporter.patch  004_node_network_iface.patch  005_num_cpu.patch  006_apiserver_sla.patch  core-alert-rules.patch
charms/worker/k8s/src/: certificates.py  charm.py  charmed_etcd.py  cloud_integration.py  config_change_preventer.py  containerd.py  cos_integration.py  endpoints.py  inspector.py  k8sd_api_manager.py  kube_control.py  literals.py  pki.py  protocols.py  reschedule.py  snap.py  token_distributor.py  upgrade.py  utils.py
charms/worker/k8s/src/client/: k8s.py  node.py
charms/worker/k8s/src/config/: arg_files.py  bootstrap.py  changed.py  cluster.py  extra_args.py  option.py  proxy_service.py  resource.py
charms/worker/k8s/src/events/: update_status.py
charms/worker/k8s/src/grafana_dashboards/: apiserver.json  cluster-total.json  controller-manager.json  etcd.json  k8s-resources-cluster.json  k8s-resources-multicluster.json  k8s-resources-namespace.json  k8s-resources-node.json  k8s-resources-pod.json  k8s-resources-workload.json  k8s-resources-workloads-namespace.json  kubelet.json  namespace-by-pod.json  namespace-by-workload.json  persistentvolumesusage.json  pod-total.json  proxy.json  scheduler.json  workload-total.json
charms/worker/k8s/src/k8s/: client.py  node.py
charms/worker/k8s/src/prometheus_alert_rules/: etcd.yaml  kubePrometheus-prometheusRule.yaml  kubeStateMetrics-prometheusRule.yaml  kubernetesControlPlane-prometheusRule.yaml
charms/worker/k8s/templates/: cos_roles.yaml  ksm.yaml  reschedule.service  reschedule.timer  snap_installation.yaml
charms/worker/k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
charms/worker/k8s/tests/unit/: conftest.py  mocks.py  test_arg_files.py  test_base.py  test_bootstrap.py  test_cloud_integration.py  test_config_options.py  test_containerd.py  test_endpoints.py  test_inspector.py  test_k8sd_api_manager.py  test_pki.py  test_reschedule.py  test_snap.py  test_token_distributor.py  test_upgrade.py
charms/worker/k8s/tests/unit/config/: test_cluster.py  test_option.py  test_proxy_service.py
charms/worker/k8s/tests/unit/events/: test_update_status.py
charms/worker/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
docs/releases/stable/: index.md
docs/stable/: index.md
src/: charm.py
tests/: conftest.py
tests/conformance/: sonobuoy.sh
tests/integration/: MIGRATION.md  _test_ceph.py  _test_dqlite.py  _test_dualstack.py  bundle.py  cloud.py  conftest.py  cos_substrate.py  grafana.py  helpers.py  k8s_cloud.py  literals.py  lxd_substrate.py  prometheus.py  storage.py  tags.py  terraform_setup.py  test-bundle-etcd.yaml  test-bundle.yaml  test_ceph.py  test_ceph_candidate.py  test_ceph_stable.py  test_certificates.py  test_charm.py  test_charmed_etcd.py  test_cncf_conformance.py  test_config_changes.py  test_cos.py  test_dqlite.py  test_dualstack.py  test_etcd.py  test_external_certs.py  test_ipv6_only.py  test_k8s.py  test_managed_etcd.py  test_openstack.py  test_registry.py  test_smoke.py  test_upgrade.py
tests/integration/data/: .terraform.lock.hcl  ceph-manifest.yaml  cos-offers-overlay.yaml  default-manifest.yaml  k8s.profile  main.tf  microk8s.profile  setup_with_terraform.sh  static-no-proxy.yaml  static-proxy-config.yaml  test-bundle-ceph-candidate.yaml  test-bundle.yaml  (+12 more)
tests/integration_jubilant/: conftest.py  helpers.py  literals.py  test_k8s.py
tests/unit/: conftest.py  mocks.py  test_arg_files.py  test_base.py  test_cloud_integration.py  test_containerd.py  test_endpoints.py  test_inspector.py  test_k8sd_api_manager.py  test_pki.py  test_reschedule.py  test_snap.py  test_token_distributor.py  test_upgrade.py
(+36 files in other folders)
