[project]
name = "k8s"
version = "0.1.0"
description = "Charmed Operators for Canonical Kubernetes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "charm-lib-interface-external-cloud-provider @ git+https://github.com/charmed-kubernetes/charm-lib-interface-external-cloud-provider@e9cadd749ff8e2a6c81fadb0268a8b10e26876be",
    "charm-lib-node-base @ git+https://github.com/charmed-kubernetes/layer-kubernetes-node-base@1bd8506cf1fdfcb584c50388c7082cc23a5ee14f#subdirectory=ops",
    "charms.contextual-status",
    "charms.reconciler",
    "ops.interface_aws @ git+https://github.com/charmed-kubernetes/interface-aws-integration@main#subdirectory=ops",
    "ops.interface_gcp @ git+https://github.com/charmed-kubernetes/interface-gcp-integration@main#subdirectory=ops",
    "ops.interface_azure @ git+https://github.com/charmed-kubernetes/interface-azure-integration@main#subdirectory=ops",
    "cosl",
    "ops",
    "pydantic",
    "PyYAML",
    "tomli",
    "tomli-w",
    "typing_extensions",
    "websocket-client",
    "poetry-core",
    "lightkube",
    "httpx",
    "loadbalancer_interface",
    "cryptography>=44.0.0",
    "ops-interface-kube-control==0.3.1",
]

[dependency-groups]
unit = [
    "coverage[toml]>=7.6.1",
    "pytest>=8.3.4",
]
